--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,3 +28,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Compare with golden
+      run: |
+        git clone git@github.com:ZhangGe6/onnx-modifier.git
+        cd onnx-modifier
+        pip install -r requirements.txt
